Add missing dependencies to requirements.txt - fixes Railway healthcheck failure

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 flask
 flask-cors
+flask-socketio
 requests
 openai
-flask-socketio
 python-dateutil
 python-dotenv
 psycopg2-binary
+geopandas
+supabase
+werkzeug
