--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,6 @@
-[phases.setup]
-nixPkgs = ["python311", "nodejs_18", "npm-9_x"]
+[providers]
+python = "3.11"
+nodejs = "18"
 
 [phases.install]
 cmds = [
