--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,6 +1,9 @@
-[providers]
-python = "3.11"
-nodejs = "18"
+[variables]
+PYTHON_VERSION = "3.11"
+NODE_VERSION = "18"
+
+[phases.setup]
+nixPkgs = ["python311", "python311Packages.pip", "nodejs_18", "npm"]
 
 [phases.install]
 cmds = [
